updated corrections on the index page upon text overflow test

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,10 @@ body {
   line-height: 20px;
 }
 
+.navigation-search .search-label {
+  display: flex;
+}
+
 .navigation-search .search-input {
   width: 359px;
   padding: 8px 8px 8px 46px;
@@ -1124,6 +1128,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  max-width: 125px;
   margin-left: auto;
   cursor: pointer;
 }
@@ -1151,6 +1156,7 @@ body {
 }
 
 .subscribe-form .subscribe-button {
+  max-width: 270px;
   padding: 15px 32px 15px 36px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
